--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/modules.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources/
@@ -50,3 +51,4 @@ fabric.properties
 
 #video files
 .webm
+.iml
