--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-#test
+#test2
 # User-specific stuff:
 .idea/tasks.xml
 .DS_Store
