--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ botocore==1.4.81
 cement==2.8.2
 click==6.6
 colorama==0.3.7
+daterangestr==0.0.3
 docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
@@ -18,6 +19,7 @@ Jinja2==2.8
 jmespath==0.9.0
 MarkupSafe==0.23
 pathspec==0.3.4
+git+git://github.com/zbluhm/pyowm.git#egg=pyown
 python-dateutil==2.6.0
 pytz==2016.7
 PyYAML==3.12
