--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==2.8
 jmespath==0.9.0
 MarkupSafe==0.23
 pathspec==0.3.4
+PyMySQL==0.7.9
 git+git://github.com/zbluhm/pyowm.git#egg=pyown
 python-dateutil==2.6.0
 pytz==2016.7
