--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ docutils==0.12
 Flask==0.11.1
 Flask-RESTful==0.3.5
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.13.1
 itsdangerous==0.24
 Jinja2==2.8
 jmespath==0.9.0
@@ -33,3 +34,4 @@ wcwidth==0.1.7
 websocket-client==0.39.0
 Werkzeug==0.11.11
 wheel==0.24.0
+WTForms==2.1
